# not-broadway

./: .gitignore  CLAUDE.md  README.md  check_db.ts  jest.config.js  package-lock.json  package.json  theatres.txt  tsconfig.scripts.json  walkthrough.md
app/: layout.tsx  page.tsx
components/: FilterPanel.tsx  ShowCard.tsx
components/__tests__/: FilterPanel.test.tsx  ShowCard.test.tsx
lib/: api.ts  mockData.ts
public/: shows.json
scraper/: ANALYSIS.md  Makefile  NEXT_STEPS.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  TYPESCRIPT_GUIDE.md  TYPESCRIPT_PORT_SUMMARY.md  UV_SETUP.md  parse-html-to-csv.ts  pyproject.toml  requirements.txt  theaters.csv  tsconfig.json
scraper/base/: __init__.py  base_scraper.py  data_schema.py
scraper/config/: theater_registry.json
scraper/custom/: __init__.py
scraper/db/: client.ts  queries.ts  schema.ts
scraper/export/: generate-blob.ts  upload-s3.ts
scraper/jobs/: discover-theaters.ts  scrape-shows.ts
scraper/sources/: artnewyork.ts  base.ts  freshgroundpepper.ts  index.ts  newyorktheater.ts  newyorktheaterguide.ts
scraper/sources/__tests__/: artnewyork.test.ts  base.test.ts
scraper/src/: index.ts
scraper/src/base/: base-scraper.ts  data-schema.ts
scraper/src/utils/: parsing.ts
scraper/utils/: __init__.py  cache.ts  parsing.py
scripts/: dev-generate.ts  discover-theaters.ts  geocode-theaters.ts  inspect-database.ts  migrate-add-coordinates.ts  publish.ts  scrape-shows.ts  seed-database.ts  test-nytg-shows.ts
store/: useShowStore.ts
types/: index.ts  scraper.ts
(+1 files in other folders)
