[project]
name = "not-broadway-scrapers"
version = "0.1.0"
description = "Web scrapers for NYC theater show data"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "python-dateutil>=2.8.0",
    "selenium>=4.15.0",
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "pyquery>=2.0.0",
    "selectolax>=0.3.0",
    "tenacity>=8.2.0",
    "ratelimit>=2.2.1",
    "loguru>=0.7.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.24.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
